-
Bug
-
Resolution: Done
-
P2: Important
-
6.4, 6.5
-
162654925e (qt/qtdeclarative/dev) 162654925e (qt/tqtc-qtdeclarative/dev)
Consider the following file:
import QtQuick Item { property int i property string i signal f() signal f(a: int) }
The engine would complain about the duplicated properties and signals, but qmllint doesn't.
| For Gerrit Dashboard: QTBUG-106579 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 438106,5 | qmllint: Warn about duplicated signal/property names | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |