qmllint: Warn about duplicated signal/property names

Qmllint does not warn about duplicated property and
signal names while qmlengine complains about them. Introduce a new logging
category for the duplicated names and log duplicated property/signals.
This change breaks one of tst_qmljsscope testcase as it expects no
logging within that case, edit it.

Fixes: QTBUG-106579
Change-Id: I7732e08778a25e1eb2ba980ae395564b98c665a5
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>