tests/auto/qml/qmllint/data/duplicatedPropertyName.qml
@@ -1,0 +1,9 @@
+import QtQuick
+
+Item {
+    property int cat: 12
+    property string cat: "mutantx"
+
+    signal clicked()
+    signal clicked(a: int)
+}
